force-app/main/default/objects/UserToDoVideos__c/UserToDoVideos__c.object-meta.xml
<CustomObject>
    <description>Stores the link to to do videos and there subtitles for a user.</description>
    <label>UserToDoVideo</label>
    <nameField>
        <label>UserToDoVideos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserToDoVideos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>