force-app/main/default/objects/UserToDoVideos__c/fields/VideoExternalId__c.field-meta.xml
<CustomField>
    <fullName>VideoExternalId__c</fullName>
    <description>External id of video on Synthesia platform</description>
    <label>VideoExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>