force-app/main/default/objects/UserToDoVideos__c/fields/VideoSubtitleLink__c.field-meta.xml
<CustomField>
    <fullName>VideoSubtitleLink__c</fullName>
    <description>Link to subtitles of video which are stored in Salesforce</description>
    <label>VideoSubtitleLink</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>