force-app/main/default/objects/UserToDoVideos__c/fields/VideoURl__c.field-meta.xml
<CustomField>
    <fullName>VideoURl__c</fullName>
    <description>Downloadable url of video</description>
    <label>VideoURl</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>